; ModuleID = '/home/carl/AnghaBench/rufus/src/extr_stdlg.c_SetTaskbarProgressValue.c'
source_filename = "/home/carl/AnghaBench/rufus/src/extr_stdlg.c_SetTaskbarProgressValue.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ptbl = common dso_local global i32* null, align 8
@FALSE = common dso_local global i32 0, align 4
@hMainDialog = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @SetTaskbarProgressValue(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  %6 = load i32*, i32** @ptbl, align 8
  %7 = icmp eq i32* %6, null
  br i1 %7, label %8, label %10

8:                                                ; preds = %2
  %9 = load i32, i32* @FALSE, align 4
  store i32 %9, i32* %3, align 4
  br label %20

10:                                               ; preds = %2
  %11 = load i32*, i32** @ptbl, align 8
  %12 = load i32, i32* @hMainDialog, align 4
  %13 = load i32, i32* %4, align 4
  %14 = load i32, i32* %5, align 4
  %15 = call i32 @ITaskbarList3_SetProgressValue(i32* %11, i32 %12, i32 %13, i32 %14)
  %16 = call i32 @FAILED(i32 %15)
  %17 = icmp ne i32 %16, 0
  %18 = xor i1 %17, true
  %19 = zext i1 %18 to i32
  store i32 %19, i32* %3, align 4
  br label %20

20:                                               ; preds = %10, %8
  %21 = load i32, i32* %3, align 4
  ret i32 %21
}

declare dso_local i32 @FAILED(i32) #1

declare dso_local i32 @ITaskbarList3_SetProgressValue(i32*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
